# github-contributions

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_project.yml  generate_html.py  package-lock.json  package.json  packages.yml  profiles.yml  soda_checks.yml  soda_configuration.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: create_github_runner.yml  data_quality.yml  dbt.yml  deploy_dashboard.yml  deploy_dashboard_to_github_pages.yml  deploy_to_github_pages.yml  pull_request.yml  upload_duckdb_database_to_motherduck.yml  webapp_ci.yml
_site/: README.md  generate_html.py  index.html
_site/assets/: datatable.js  styles.css
_site/templates/: pull_requests.html
dashboard/: Dashboard.tsx  KPI.tsx  README.md  generate_constants.py  next.config.js  package-lock.json  package.json  theme.ts
dashboard/generate/: definitions.py  generate_constants.py  generate_html.py
dashboard/pages/: _app.tsx  index.tsx
dashboard/pull_requests/: generate_html.py
dashboard/src/: Dashboard.tsx  DrawerItems.tsx  KPI.tsx  constants.tsx  drawerItems.tsx  (+1 more)
github-contributions-webapp/: .eslintrc.cjs  .gitignore  package-lock.json  package.json
github_contributions/: README.md  plugin.py  pyproject.toml  setup.cfg
github_contributions/src/github_contributions/: api.py  constants.py  plugin.py  pull_requests.py
github_contributions/tests/: test_api.py  test_plugin.py
public/: index.html
templates/: index.html
webapp/: .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+43 files in other folders)
