[metadata]
name = github_contributions
description = Github contributions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xebia/github-contributions/
author = Cor Zuurmond
maintainer = Cor Zuurmond
maintainer_email = cor.zuurmond@xebia.com
license = Apache 2.0
license_file = LICENSE
platforms = any
keywords = dbt, duckdb, github
project_urls =
    Source=https://github.com/xebia/github-contributions/
    Tracker=https://github.com/xebia/github-contributions/issues

[options]
packages = find:
package_dir = =src
install_requires =
    requests>=2.0.0,<3.0.0
    pandas>=2.0.0,!=2.1.0,<3.0.0  # 2.1.0 is missing a module
    frozendict>=2.0.0,<3.0.0
python_requires = >=3.7

[options.packages.find]
where = src

[flake8]
ignore = E226,E302,E41,W504,W503
max-line-length = 120
exclude = venv\,direnv\

[mypy]
python_version = 3.9
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
